
(executable (name example0)
 (modules example0)
 (libraries ocamlgtk)
)

(executable (name example0_oo)
 (modules example0_oo)
 (libraries ocamlgtk)
)

(executable (name get_set)
 (modules get_set)
 (libraries ocamlgtk)
)

(executable (name textiter_raw)
 (modules textiter_raw)
 (libraries ocamlgtk)
)
